# Stateful_Agentic_AI

./: .gitignore  pyproject.toml  requirements.txt
src/langgraphagenticai/: main.py
src/langgraphagenticai/LLMS/: ollamallm.py
src/langgraphagenticai/graph/: graph_builder.py
src/langgraphagenticai/nodes/: ai_news_node.py
src/langgraphagenticai/state/: state.py
src/langgraphagenticai/tools/: search_tool.py
src/langgraphagenticai/ui/: uiconfigfile.ini  uiconfigfile.py
src/langgraphagenticai/ui/streamlitui/: display_result.py  loadui.py
