[project]
name = "building-stateful-agentic-ai-with-langgraph-and-llama-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.2",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
]
